...
};

class LanguagePickerSheet extends StatelessWidget {
  static const String name = 'languagePicker';
  static const List<String> languages = [
    'English',
    'Khmer',
    'French',
    'Spanish',
    'Japanese',
  ];

  final String? selected;
...
